--- a/index.html
+++ b/index.html
@@ -1,1 +1,235 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aim Tracker</title>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
+    <div id="root"></div>
+    <script type="text/babel">
+        const { useState, useEffect } = React;
 
+        const AimTracker = () => {
+            const initialScenarios = {
+                "WhisphereRawControl Larger + Slowed": { score: 6522, category: "Control Tracking", sub: "Arm", mediumVersion: "WhisphereRawControl", difficulty: "Easy" },
+                "Whisphere 80%": { score: 12350, category: "Control Tracking", sub: "Arm", mediumVersion: "Whisphere", difficulty: "Easy" },
+                "Smoothbot Invincible Goated 75%": { score: 2484, category: "Control Tracking", sub: "Arm", mediumVersion: "Smoothbot Invincible Goated", difficulty: "Easy" },
+                "Leaptrack Goated 60% Larger": { score: 2056, category: "Control Tracking", sub: "Wrist", mediumVersion: "Leaptrack Goated 75% Slightly Larger", difficulty: "Easy" },
+                "Controlsphere rAim Easy 90%": { score: 7845, category: "Control Tracking", sub: "Wrist", mediumVersion: "Controlsphere rAim Easy", difficulty: "Easy" },
+                "VT Controlsphere Intermediate S5 80%": { score: 2770, category: "Control Tracking", sub: "Wrist", mediumVersion: "VT Controlsphere Novice S5 Hard", difficulty: "Easy" },
+                "Air Angelic 4 Voltaic Easy 80%": { score: 3033, category: "Control Tracking", sub: "Fingertip", mediumVersion: "Air Angelic 4 Voltaic Easy", difficulty: "Easy" },
+                "Cloverrawcontrol Easy 80% Speed": { score: 4569, category: "Control Tracking", sub: "Fingertip", mediumVersion: "Cloverrawcontrol Easy", difficulty: "Easy" },
+                "Controlsphere Far, Far Larger 90%": { score: 7824, category: "Control Tracking", sub: "Fingertip", mediumVersion: "Controlsphere Far Larger", difficulty: "Easy" },
+                "PGTI Voltaic Easy 80%": { score: 905, category: "Control Tracking", sub: "Blending", mediumVersion: "PGTI Voltaic Easy", difficulty: "Easy" },
+                "Air CELESTIAL No UFO Easy Slowed": { score: 866, category: "Control Tracking", sub: "Blending", mediumVersion: "Air CELESTIAL No UFO Easy", difficulty: "Easy" },
+                "Whisphere Small & Slow 55%": { score: 11890, category: "Control Tracking", sub: "Blending", mediumVersion: "Whisphere Small & Slow 75%", difficulty: "Easy" },
+                "Air Voltaic Invincible 7 Easy 80%": { score: 2245, category: "Reactive Tracking", sub: "Control", mediumVersion: "Ground Plaza Sparky v3", difficulty: "Easy" },
+                "Controlsphere OW Long Strafes 90%": { score: 7704, category: "Reactive Tracking", sub: "Control", mediumVersion: "Controlsphere OW", difficulty: "Easy" },
+                "Flicker Plaza rAim Easy Less Blinks": { score: 893, category: "Reactive Tracking", sub: "Speed", mediumVersion: "Flicker Plaza rAim Easy", difficulty: "Easy" },
+                "Polarized Hell Easy 40% Slower": { score: 1699, category: "Reactive Tracking", sub: "Speed", mediumVersion: "Polarized Hell Easy 20% Slower", difficulty: "Easy" },
+                "Air Pure Intermediate Slower No UFO": { score: 902, category: "Reactive Tracking", sub: "Reading", mediumVersion: "Air Pure Intermediate", difficulty: "Easy" },
+                "Air Voltaic Easy Invincible 4 80%": { score: 2445, category: "Reactive Tracking", sub: "Reading", mediumVersion: "Air Voltaic Easy Invincible 4", difficulty: "Easy" },
+                "Pokeball Frenzy Auto TE Wide": { score: 1350, category: "Flick Tech", sub: "Speed", mediumVersion: "Pokeball Frenzy Auto TE Wide", difficulty: "Easy" },
+                "1w3ts Reload Larger": { score: 79, category: "Flick Tech", sub: "Speed", mediumVersion: "1w3ts Reload", difficulty: "Easy" },
+                "voxTargetSwitch 2 Large": { score: 91.5, category: "Flick Tech", sub: "Speed", mediumVersion: "voxTargetSwitch 2", difficulty: "Easy" },
+                "BeanTS Larger": { score: 95, category: "Flick Tech", sub: "Stability", mediumVersion: "BeanTS", difficulty: "Easy" },
+                "FloatTS Angelic Easy Larger": { score: 85.9, category: "Flick Tech", sub: "Stability", mediumVersion: "FloatTS Angelic Easy", difficulty: "Easy" },
+                "WaldoTS Novice": { score: 113.3, category: "Flick Tech", sub: "Micro", mediumVersion: "WaldoTS Intermediate", difficulty: "Easy" },
+                "devTS Goated NR Static 5Bot": { score: 612, category: "Flick Tech", sub: "Micro", mediumVersion: "devTS Goated NR Static 5Bot", difficulty: "Easy" },
+                "domiSwitch Easy Slower": { score: 5199, category: "Flick Tech", sub: "Evasive", mediumVersion: "domiSwitch Easy", difficulty: "Easy" },
+                "tamTargetSwitch Smooth Easy": { score: 18, category: "Flick Tech", sub: "Evasive", mediumVersion: "tamTargetSwitch Smooth Easy", difficulty: "Easy" },
+                "1wall5targets_pasu slow": { score: 95, category: "Click Timing", sub: "Reading", mediumVersion: "1wall5targets_pasu Reload", difficulty: "Easy" },
+                "B180 Voltaic Easy 92%": { score: 56, category: "Click Timing", sub: "Reading", mediumVersion: "VT Bounceshot Intermediate", difficulty: "Easy" },
+                "Controlsphere Click Easy": { score: 38, category: "Click Timing", sub: "Reading", mediumVersion: "Controlsphere Click", difficulty: "Easy" },
+                "Popcorn MV Novice": { score: 200, category: "Click Timing", sub: "Precision", mediumVersion: "Popcorn MV Intermediate", difficulty: "Easy" },
+                "Pasu Angelic 20% Larger 80% Speed": { score: 61, category: "Click Timing", sub: "Precision", mediumVersion: "Pasu Angelic 20% Larger", difficulty: "Easy" },
+                "1w2ts Pasu Perfected Easy": { score: 78, category: "Click Timing", sub: "Precision", mediumVersion: "1w2ts Pasu Perfected", difficulty: "Easy" },
+                "1w3ts Pasu Perfected Micro Goated Larger 80%": { score: 946, category: "Click Timing", sub: "Linear", mediumVersion: "1w3ts Pasu Perfected Micro Goated Larger", difficulty: "Easy" },
+                "Floating Heads Timing 400% Larger": { score: 2196, category: "Click Timing", sub: "Linear", mediumVersion: "Floating Heads Timing 400% Larger", difficulty: "Easy" },
+                "voxTargetSwitch Click": { score: 69, category: "Click Timing", sub: "Linear", mediumVersion: "voxTargetClick 20% Small", difficulty: "Easy" }
+            };
+
+            const benchmarks = {
+                "WhisphereRawControl Larger + Slowed": [5500, 6700, 7800, 8700, 9600, 10500, 11400, 12500],
+                "Whisphere 80%": [6300, 7700, 9000, 10000, 11000, 12000, 13000, 14500],
+                "Smoothbot Invincible Goated 75%": [1800, 2250, 2650, 2900, 3150, 3400, 3650, 4000],
+                "Leaptrack Goated 60% Larger": [850, 1200, 1500, 1700, 1900, 2100, 2250, 2450],
+                "Controlsphere rAim Easy 90%": [6100, 6950, 7700, 8400, 9100, 9800, 10500, 11500],
+                "VT Controlsphere Intermediate S5 80%": [1850, 2300, 2700, 3000, 3300, 3600, 3850, 4100],
+                "Air Angelic 4 Voltaic Easy 80%": [1050, 1600, 2000, 2400, 2700, 3000, 3300, 3600],
+                "Cloverrawcontrol Easy 80% Speed": [3900, 4550, 5200, 5700, 6200, 6700, 7200, 7700],
+                "Controlsphere Far, Far Larger 90%": [7600, 8150, 8700, 9200, 9800, 10200, 10900, 11500],
+                "PGTI Voltaic Easy 80%": [400, 650, 950, 1200, 1450, 1700, 2000, 2350],
+                "Air CELESTIAL No UFO Easy Slowed": [820, 835, 850, 861, 870, 878, 884, 890],
+                "Whisphere Small & Slow 55%": [6000, 7500, 9000, 10000, 10750, 11500, 12250, 13500],
+                "Air Voltaic Invincible 7 Easy 80%": [750, 1200, 1600, 1900, 2200, 2500, 2800, 3200],
+                "Controlsphere OW Long Strafes 90%": [5400, 6100, 6700, 7200, 7600, 8000, 8300, 8700],
+                "Flicker Plaza rAim Easy Less Blinks": [858, 871, 883, 890, 895, 900, 904, 909],
+                "Polarized Hell Easy 40% Slower": [750, 1100, 1400, 1600, 1800, 2000, 2150, 2500],
+                "Air Pure Intermediate Slower No UFO": [860, 874, 886, 893, 901, 907, 911, 916],
+                "Air Voltaic Easy Invincible 4 80%": [1100, 1600, 2100, 2450, 2800, 3150, 3400, 3800],
+                "Pokeball Frenzy Auto TE Wide": [650, 950, 1250, 1500, 1750, 2000, 2300, 2700],
+                "1w3ts Reload Larger": [38, 45, 52, 60, 72, 84, 94, 104],
+                "voxTargetSwitch 2 Large": [67, 78, 87, 95, 103, 110, 117, 123],
+                "BeanTS Larger": [65, 78, 90, 100, 110, 120, 130, 142],
+                "FloatTS Angelic Easy Larger": [65, 74, 81, 88, 95, 101, 106, 111],
+                "WaldoTS Novice": [65, 78, 90, 100, 110, 120, 130, 140],
+                "devTS Goated NR Static 5Bot": [350, 400, 450, 500, 550, 600, 640, 680],
+                "domiSwitch Easy Slower": [3200, 3700, 4200, 4600, 5000, 5400, 5800, 6300],
+                "tamTargetSwitch Smooth Easy": [7, 11, 15, 18, 21, 24, 26, 28],
+                "1wall5targets_pasu slow": [76, 88, 100, 110, 120, 130, 140, 150],
+                "B180 Voltaic Easy 92%": [26, 38, 50, 58, 65, 72, 78, 87],
+                "Controlsphere Click Easy": [15, 21, 27, 33, 39, 45, 50, 55],
+                "Popcorn MV Novice": [50, 100, 150, 190, 230, 270, 300, 330],
+                "Pasu Angelic 20% Larger 80% Speed": [51, 58, 65, 72, 78, 84, 90, 97],
+                "1w2ts Pasu Perfected Easy": [58, 69, 80, 87, 93, 99, 105, 110],
+                "1w3ts Pasu Perfected Micro Goated Larger 80%": [600, 700, 800, 900, 1000, 1100, 1200, 1300],
+                "Floating Heads Timing 400% Larger": [400, 700, 1000, 1350, 1700, 2050, 2400, 2750],
+                "voxTargetSwitch Click": [49, 59, 67, 74, 81, 88, 94, 100]
+            };
+
+            const ranks = ["Lemming", "Hare", "Ermine", "Penguin", "Fox", "Mammoth", "Orca", "Seal"];
+
+            const [scores, setScores] = useState(() => {
+                const saved = localStorage.getItem('aimScores');
+                return saved ? JSON.parse(saved) : initialScenarios;
+            });
+
+            const [editingScenario, setEditingScenario] = useState(null);
+
+            useEffect(() => {
+                localStorage.setItem('aimScores', JSON.stringify(scores));
+            }, [scores]);
+
+            const getRankForScore = (scenario, score) => {
+                const targets = benchmarks[scenario];
+                if (!targets) return "Lemming";
+                for (let i = targets.length - 1; i >= 0; i--) {
+                    if (score >= targets[i]) return ranks[i + 1] || "Seal";
+                }
+                return "Lemming";
+            };
+
+            const canSwapScenario = (scenario, score) => {
+                const data = scores[scenario];
+                if (!data || data.difficulty !== "Easy" || !data.mediumVersion) return false;
+                const rank = getRankForScore(scenario, score);
+                return ranks.indexOf(rank) >= ranks.indexOf("Mammoth");
+            };
+
+            const swapToMedium = (easyScenario) => {
+                const data = scores[easyScenario];
+                if (!data.mediumVersion) return;
+
+                const newScores = { ...scores };
+                newScores[data.mediumVersion] = {
+                    score: 0,
+                    category: data.category,
+                    sub: data.sub,
+                    mediumVersion: null,
+                    difficulty: "Medium"
+                };
+                delete newScores[easyScenario];
+                setScores(newScores);
+                alert(`Swapped ${easyScenario} → ${data.mediumVersion}`);
+            };
+
+            const updateScore = (scenario, newScore) => {
+                setScores(prev => ({
+                    ...prev,
+                    [scenario]: { ...prev[scenario], score: parseFloat(newScore) || 0 }
+                }));
+                setEditingScenario(null);
+            };
+
+            const grouped = {};
+            Object.entries(scores).forEach(([name, data]) => {
+                if (!grouped[data.category]) grouped[data.category] = {};
+                if (!grouped[data.category][data.sub]) grouped[data.category][data.sub] = [];
+                grouped[data.category][data.sub].push(name);
+            });
+
+            return (
+                <div className="w-full max-w-6xl mx-auto p-6 bg-gradient-to-br from-slate-900 to-slate-800 text-white min-h-screen">
+                    <div className="mb-8 bg-slate-800 rounded-xl p-6 border-2 border-blue-500/30">
+                        <h1 className="text-3xl font-bold mb-2 bg-gradient-to-r from-blue-400 via-purple-400 to-pink-400 text-transparent bg-clip-text">
+                            🎯 Aim Training Tracker
+                        </h1>
+                        <p className="text-slate-400">Rank: Hare | Click scores to edit | SWAP appears at Mammoth+</p>
+                    </div>
+
+                    {Object.entries(grouped).map(([category, subs]) => (
+                        <div key={category} className="mb-8 bg-slate-800 rounded-lg p-6 border-2 border-blue-500/30">
+                            <h2 className="text-2xl font-bold mb-4 text-blue-400">{category}</h2>
+                            {Object.entries(subs).map(([sub, scenarios]) => (
+                                <div key={sub} className="mb-6">
+                                    <h3 className="text-xl font-semibold text-purple-400 mb-3">{sub}</h3>
+                                    <div className="space-y-2">
+                                        {scenarios.map(scenario => {
+                                            const data = scores[scenario];
+                                            const rank = getRankForScore(scenario, data.score);
+                                            const canSwap = canSwapScenario(scenario, data.score);
+                                            const rankIndex = ranks.indexOf(rank);
+                                            
+                                            return (
+                                                <div key={scenario} className="bg-slate-700 rounded-lg p-4">
+                                                    <div className="flex justify-between items-center gap-4">
+                                                        <div className="flex-1">
+                                                            <div className="flex items-center gap-2 mb-1">
+                                                                <div className="font-medium text-white">{scenario}</div>
+                                                                <span className={`px-2 py-0.5 rounded text-xs font-bold ${
+                                                                    data.difficulty === "Easy" ? "bg-green-600" : "bg-yellow-600"
+                                                                }`}>{data.difficulty}</span>
+                                                            </div>
+                                                            <div className="text-sm text-slate-400">
+                                                                {editingScenario === scenario ? (
+                                                                    <input type="number" defaultValue={data.score}
+                                                                        onBlur={(e) => updateScore(scenario, e.target.value)}
+                                                                        onKeyDown={(e) => e.key === 'Enter' && updateScore(scenario, e.target.value)}
+                                                                        className="bg-slate-600 px-2 py-1 rounded w-32" autoFocus />
+                                                                ) : (
+                                                                    <span onClick={() => setEditingScenario(scenario)}
+                                                                        className="cursor-pointer hover:text-blue-400">
+                                                                        Score: {data.score.toLocaleString()} ✎
+                                                                    </span>
+                                                                )}
+                                                            </div>
+                                                        </div>
+                                                        <div className="flex items-center gap-3">
+                                                            <span className={`px-3 py-1 rounded-lg text-sm font-bold ${
+                                                                rankIndex >= 5 ? 'bg-green-600' : rankIndex >= 1 ? 'bg-blue-600' : 'bg-slate-600'
+                                                            }`}>{rank}</span>
+                                                            {canSwap && (
+                                                                <button onClick={() => swapToMedium(scenario)}
+                                                                    className="px-4 py-2 bg-gradient-to-r from-yellow-500 to-orange-500 hover:from-yellow-600 hover:to-orange-600 text-white font-bold rounded-lg shadow-lg">
+                                                                    ⬆️ SWAP
+                                                                </button>
+                                                            )}
+                                                        </div>
+                                                    </div>
+                                                    {canSwap && (
+                                                        <div className="mt-3 bg-yellow-900/20 border border-yellow-500/30 rounded p-3">
+                                                            <div className="text-xs text-yellow-400">🎯 Ready for {data.mediumVersion}!</div>
+                                                        </div>
+                                                    )}
+                                                </div>
+                                            );
+                                        })}
+                                    </div>
+                                </div>
+                            ))}
+                        </div>
+                    ))}
+                </div>
+            );
+        };
+
+        ReactDOM.render(<AimTracker />, document.getElementById('root'));
+    </script>
+</body>
+</html>
